Fixed an issue where the list of marks could sometimes get cut off. Addresses #235

--- a/assets/css/partials/_stream.scss
+++ b/assets/css/partials/_stream.scss
@@ -1,5 +1,6 @@
 // Mark Sream
 .marks_list {
+    padding-bottom: 200px;
     .mark {
         border-bottom: 1px solid $color_lighter;
         padding: 18px 52px 20px 52px;
